changed all of the z-indexes to use a variable and fixed the header in the layout.less

--- a/assets/less/layout.less
+++ b/assets/less/layout.less
@@ -45,8 +45,9 @@
     .clearfix();
 
     .mobileLandscape({
-      padding-top: 0;
-      position: fixed;
+      z-index: @zindexNav;
+      position: fixed;    
+      padding-top: 0;      
       width: 100%;
       top: 0;
     });
@@ -85,8 +86,8 @@
 
 .content {    
   margin-right: @marginRight;    
-  display: block;
   width: 66.4375%;
+  display: block;  
   float: left;  
 
   .tabletPortrait({
