--- a/assets/less/modules/filters.less
+++ b/assets/less/modules/filters.less
@@ -15,7 +15,7 @@
   margin: 0 0 @marginBottom 0;  
   border-bottom: @border;
   position: relative;
-  z-index: 99999;
+  z-index: @zindexOverlay;
   padding: 0;
 
   a {
