--- a/assets/less/modules/header.less
+++ b/assets/less/modules/header.less
@@ -41,7 +41,7 @@
 
   &:after {
     .svgIcon(18px; "icon-search"; top; 4px; right; 5px);
-    z-index: 9999;
+    z-index: @zindexInputs;
   }
 }
 
