--- a/assets/less/modules/nav.less
+++ b/assets/less/modules/nav.less
@@ -12,14 +12,14 @@
   margin: 0; 
 
   .navbar {
-    .uppercaseFont(13px);      
-    margin-bottom: 0; 
+    .uppercaseFont(13px);   
+    z-index: @zindexNav;       
     background: #ffffff;
     position: relative;
     height: @navHeight;
     border-radius: 0;
-    min-height: 0px;        
-    z-index: 999;
+    margin-bottom: 0; 
+    min-height: 0px;            
     border: none;
 
     form {
@@ -183,12 +183,12 @@
 
       .caret {
         width: @caretWidth;
+        z-index: @zindexNav;
         background: #000000;
         position: absolute;  
         height: @navHeight - 1px;  
         display: block;              
-        content: "";
-        z-index: 1;
+        content: "";        
         left: 100%;
         top: 0; 
 
@@ -228,7 +228,7 @@
       box-shadow: none;
       position: absolute;
       line-height: 12px;
-      z-index: 99999;        
+      z-index: @zindexNav;        
       padding: 0;
       margin: 0;
       top: 100%;
@@ -298,7 +298,7 @@
           border-left: @size solid transparent;       
           position: absolute;      
           display: block;
-          z-index: 9999;
+          z-index: @zindexNav;
           content: "";            
           right: 8px; 
           top: -2px; 
@@ -312,7 +312,7 @@
           border-left: @size solid transparent;       
           position: absolute;      
           display: block;
-          z-index: 9999;
+          z-index: @zindexNav;
           content: "";            
           right: 8px; 
           top: -2px; 
