--- a/assets/less/modules/tooltips.less
+++ b/assets/less/modules/tooltips.less
@@ -7,7 +7,7 @@
     border-right: 5px solid transparent; 
     border-left: 5px solid transparent;       
     position: absolute;
-    z-index: 999999;
+    z-index: @zindexOverlay;
     display: none;
     content: "";
     top: 100%; 
